Input for adding new todos

--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -1,4 +1,6 @@
 .Input {
-  display: inline-block;
+  display: block;
+  width: 100%;
+  text-align: center;
 }
 /*# sourceMappingURL=Input.css.map */
