--- a/src/components/Todo/Todo.scss
+++ b/src/components/Todo/Todo.scss
@@ -1,3 +1,8 @@
 .Todo {
   display: inline-block;
+  height: 350px;
+  width: 250px;
+  padding: 1rem;
+  border: 2px solid #111;
+  font-size: 24px;
 }
