--- a/src/components/TodoList/TodoList.scss
+++ b/src/components/TodoList/TodoList.scss
@@ -1,3 +1,10 @@
 .TodoList {
   display: block;
 }
+
+.TodoList__todos {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  gap: 20px;
+}
