--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -1,5 +1,12 @@
 .Input {
-  display: block;
+  display: flex;
   width: 100%;
   text-align: center;
+  input {
+    flex-grow: 10;
+    width: 100%;
+  }
+  button {
+    flex-grow: 2;
+  }
 }
