--- a/src/components/Todo/Todo.css
+++ b/src/components/Todo/Todo.css
@@ -1,9 +1,37 @@
 .Todo {
-  display: inline-block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   height: 350px;
   width: 250px;
   padding: 1rem;
-  border: 2px solid #111;
+  background-color: #fff7cc;
+  border: 2px solid #333;
+  border-radius: 0.5rem;
   font-size: 24px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 2rem;
+}
+
+.Todo > button {
+  display: block;
+  width: 100%;
+}
+
+.Todo__content {
+  max-height: 220px;
+  font-size: 24px;
+  font-family: Courier, monospace;
+  word-break: break-word;
+  overflow: auto;
 }
 /*# sourceMappingURL=Todo.css.map */
