--- a/src/components/TodoList/TodoList.css
+++ b/src/components/TodoList/TodoList.css
@@ -1,5 +1,14 @@
 .TodoList {
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 3rem;
+  padding: 2rem;
+  font-size: 30px;
 }
 
 .TodoList__todos {
